[package]
name = "templatize-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.15.0"
toml = "0.5.8"
serde_json = "1.0"
